Fix news card text overflow issue

--- a/src/components/sections/news/newsCard/newsCard.scss
+++ b/src/components/sections/news/newsCard/newsCard.scss
@@ -10,6 +10,7 @@
   flex-direction: column;
   padding: 5px 15px 15px 15px;
   height: 100%;
+  word-break: break-word;
 }
 
 .tf__newsCard-date {
